force-app/main/default/objects/IntegrationMapChild__c/IntegrationMapChild__c.object-meta.xml
<CustomObject>
    <description>[a07][IntegrationMapChild__c] Mapa da integração filha.</description>
    <label>Mapa da integração filha</label>
    <nameField>
        <label>Nome de Mapa da integração filha</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapa da integração filha</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>