force-app/main/default/objects/IntegrationMapChild__c/fields/ChildLkp__c.field-meta.xml
<CustomField>
    <fullName>ChildLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mapa de integração</label>
    <referenceTo>IntegrationMap__c</referenceTo>
    <relationshipLabel>Mapa da integração filha (Mapa de integração)</relationshipLabel>
    <relationshipName>Mapa_da_integra_o_filha</relationshipName>
    <type>Lookup</type>
</CustomField>