force-app/main/default/objects/IntegrationMapChild__c/fields/OrderNmb__c.field-meta.xml
<CustomField>
    <fullName>OrderNmb__c</fullName>
    <label>Ordem</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>