force-app/main/default/objects/IntegrationMapChild__c/fields/ParentLkp__c.field-meta.xml
<CustomField>
    <fullName>ParentLkp__c</fullName>
    <label>Mapa de integração</label>
    <referenceTo>IntegrationMap__c</referenceTo>
    <relationshipLabel>Mapa da integração filha</relationshipLabel>
    <relationshipName>IntegratioMapParents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>